--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 <div class="container">
  <div class="logo">
-    <img src="../../../assets/media/APLogo.png" id="logoAP">
+    <a href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa"> <img src="../../../assets/media/APLogo.png"  id="logoAP"></a>
  </div>
  <div class="redes">
     <a href=""> <img src="../../../assets/media/facebook.png" id="facebook"></a>
