--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -6,7 +6,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A deserunt laudantium aperiam sit nam ex similique, pariatur dolor, incidunt odit illum atque corporis, porro iusto esse sed alias delectus soluta!</p>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 parte2">
-        <img src="../../../assets/media/memes2.png" class="img-fluid img-proyecto">
+        <img src="../../../assets/media/placeholder.png" class="img-fluid img-proyecto">
         </div>
 
     </div>
