creacion de tabla de listado de notebooks

--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -9,7 +9,7 @@
     <a href=""> <img src="../../../assets/media/instagram.png" id="instagram"></a>
     <a href=""> <img src="../../../assets/media/linkedin.png" id="linkedin"></a>
     <a href=""> <img src="../../../assets/media/github.png" id="github"></a>
-    <button type="button" class="btn btn-outline-light">Log In</button>
+    <button type="button" class="btn btn-outline-light" (click)="login()">Log In</button>
  </div>
 </div>
 </div>
