--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-header></app-header>
-<app-acerca-de></app-acerca-de>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-hask></app-hask>
-<app-proyecto></app-proyecto>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
